pom updated according to sonatype